tests/invalid/currying_multimode_func.m
%---------------------------------------------------------------------------%
% vim: ft=mercury ts=4 sw=4 et
%---------------------------------------------------------------------------%

:- module currying_multimode_func.
:- interface.

:- import_module io.

:- pred main(io::di, io::uo) is det.

%---------------------------------------------------------------------------%
%---------------------------------------------------------------------------%

:- implementation.

:- import_module uint.

%---------------------------------------------------------------------------%

main(!IO) :-
    run_binop_test(uint.(xor), !IO).

%---------------------------------------------------------------------------%

:- pred run_binop_test((func(uint, uint) = uint)::in, io::di, io::uo) is det.

run_binop_test(_BinOpFunc, !IO).

%---------------------------------------------------------------------------%
:- end_module currying_multimode_func.
%---------------------------------------------------------------------------%
