tests/invalid/currying_multimode_func.err_exp
currying_multimode_func.m:022: In clause for `main(di, uo)':
currying_multimode_func.m:022:   in argument 1 of call to predicate
currying_multimode_func.m:022:   `currying_multimode_func.run_binop_test'/3:
currying_multimode_func.m:022:   mode error: variable [38;5;87m`V_6'[39;49m has
currying_multimode_func.m:022:   instantiatedness [38;5;203m`free',[39;49m
currying_multimode_func.m:022:   expected instantiatedness was
currying_multimode_func.m:022:   [38;5;40m`(func(in, in) = out is det)'.[39;49m
currying_multimode_func.m:022:   This may have been caused by the following
currying_multimode_func.m:022:   error.
currying_multimode_func.m:022:   In clause for `main(di, uo)':
currying_multimode_func.m:022:   in argument 1 of call to predicate
currying_multimode_func.m:022:   `currying_multimode_func.run_binop_test'/3:
currying_multimode_func.m:022:   mode error in unification of `V_6' and
currying_multimode_func.m:022:   higher-order term based on multi-moded
currying_multimode_func.m:022:   function `uint.xor'/2.
currying_multimode_func.m:022:   The modes of the argument variables [38;5;203mmatch more[39;49m
currying_multimode_func.m:022:   [38;5;203mthan one[39;49m of the called function's modes.
For more information, recompile with `-E'.
